[package]
name = "yd"
version = "0.1.0"
edition = "2021"
authors = ["Yorigami Chitose <YorigamiChitose@outlook.com>"]
homepage = "https://github.com/YorigamiChitose/yd"
repository = "https://github.com/YorigamiChitose/yd"
license = "MIT"

[dependencies]
clap = { version = "4.5.23", features = ["env", "derive"] }
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde_json = "1.0.133"
sha2 = "0.10.8"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
