[package]
name = "yd"
version = "0.1.0"
edition = "2024"
authors = ["Yorigami Chitose <YorigamiChitose@outlook.com>"]
homepage = "https://github.com/YorigamiChitose/yd"
repository = "https://github.com/YorigamiChitose/yd"
license = "MIT"

[dependencies]
clap = { version = "4.5.32", features = ["env", "derive"] }
reqwest = { version = "0.12.14", features = ["json", "blocking"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.14.0", features = ["v4"] }
