[package]
name = "yd"
version = "0.1.0"
edition = "2024"
authors = ["Yorigami Chitose <YorigamiChitose@outlook.com>"]
homepage = "https://github.com/YorigamiChitose/yd"
repository = "https://github.com/YorigamiChitose/yd"
license = "MIT"

[dependencies]
clap = { version = "4.5.41", features = ["env", "derive"] }
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
